--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -31,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:scaleType="centerCrop"
-                android:showImage="@{productModel.imageUrl}" />
+                bind:showImage="@{productModel.imageUrl}" />
 
             <TextView
                 android:id="@+id/product_title"
