--- a/app/src/main/res/layout/products_activity.xml
+++ b/app/src/main/res/layout/products_activity.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="myAdapter"
-            type="com.example.mvvmproject.view.ProductListAdapter" />
+            type="com.example.mvvmproject.view.ProductAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
