Adding SwipeRefreshLayout to data binding and some code cleaning

--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="productsContract"
-            type="com.example.mvvmproject.presenter.ProductsContract.Actions" />
+            type="com.example.mvvmproject.presenter.ProductsContract" />
     </data>
 
     <androidx.cardview.widget.CardView
